http://issues.nfractals.com:8080/browse/PELOTON-1028 [agents] initial puppet modules inmplemetation for Spark. No workers yet.

--- a/ambari-server/pom.xml
+++ b/ambari-server/pom.xml
@@ -313,6 +313,9 @@
               <filemode>755</filemode>
               <sources>
                 <source>
+                  <location>src/main/resources/scripts/install_spark.sh</location>
+                </source>
+                <source>
                   <location>src/main/resources/scripts/install_flume.sh</location>
                 </source>
                 <source>
@@ -353,6 +356,14 @@
               <sources>
                 <source>
                   <location>src/main/resources/stacks/HDP</location>
+                </source>
+              </sources>
+            </mapping>
+            <mapping>
+              <directory>/var/lib/ambari-server/resources/stacks/NFL</directory>
+              <sources>
+                <source>
+                  <location>src/main/resources/stacks/NFL</location>
                 </source>
               </sources>
             </mapping>
