http://issues.nfractals.com:8080/browse/PELOTON-1040 [server] Shark service definition was added

--- a/ambari-server/pom.xml
+++ b/ambari-server/pom.xml
@@ -316,6 +316,9 @@
                   <location>src/main/resources/scripts/install_spark.sh</location>
                 </source>
                 <source>
+                  <location>src/main/resources/scripts/install_shark.sh</location>
+                </source>
+                <source>
                   <location>src/main/resources/scripts/install_flume.sh</location>
                 </source>
                 <source>
